ra.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "ra-demo"
spec:
  selector:
    matchLabels:
      app: httpbin
  jwtRules:
  - issuer: "r@iiot.io"
    jwksUri: "https://qc-demo.iiot.io/jwks/"
