ap_custom.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ap-demo"
spec:
  selector:
    matchLabels:
      app: httpbin
  action: CUSTOM
  provider:
    name: opa.default
  rules:
  - to:
    - operation:
        paths: ["/headers"]
